# Aimbot

./: .gitignore  CMakeLists.txt  README.md  run.sh
calibration/: calibrate_camera.py  calibrate_imu.cpp  calibrate_robotworld_handeye.cpp  capture.cpp  capture_h30.cpp
configs/: calibration.yaml  mvs.yaml  sentry.yaml  standard3.yaml  standard4.yaml  standard_onnx0526.yaml
io/: CMakeLists.txt  camera.cpp  usb_communication.cpp  usb_communication.hpp
io/h30_imu/: h30_imu.cpp  h30_imu.hpp
io/hikrobot/: hikrobot.cpp  hikrobot.hpp
src/: mt_auto_aim_debug.cpp  sentry.cpp  standard.cpp  standard_onnx0526.cpp
tasks/auto_aim/: CMakeLists.txt  solver.cpp  solver.hpp  target.cpp  tracker.cpp  tracker.hpp  yolo.cpp
tasks/auto_aim/multithread/: usb_communication.cpp  usb_communication.h  usb_protocol.cpp  usb_protocol.hpp  usb_worker.cpp
tasks/auto_aim/yolos/: yolo_0526_ort.cpp  yolo_0526_ort.hpp  yolo_0526_trt.cpp  yolo_0526_trt.hpp
